A few more tasks to complete. Fixing the problem with overlapping Divs using transparent background color. And the menu section of the menu.css. Will finish in the morning

--- a/css/menu.css
+++ b/css/menu.css
@@ -150,6 +150,10 @@ h1 a {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    color: rgb(225, 239, 230);
+}
+.menu div {
+    background-color: rgb(0, 4, 17, .8);
 }
 
 /* footer section */
